# research-dag-analysis

./: .gitignore  CMakeLists.txt  README.md  package.xml
Autoware/: optimization_result.csv  raw_data.csv
Autoware/after/: imm_ukf_pda_track.csv  lidar_euclidean_cluster_detect.csv  lidar_republisher.csv  ndt_matching.csv  op_behavior_selector.csv  op_global_planner.csv  op_motion_predictor.csv  op_trajectory_evaluator.csv  op_trajectory_generator.csv  pure_pursuit.csv  ray_ground_filter.csv  twist_filter.csv  twist_gate.csv  voxel_grid_filter.csv
Autoware/before/: imm_ukf_pda_track.csv  lidar_euclidean_cluster_detect.csv  lidar_republisher.csv  ndt_matching.csv  op_behavior_selector.csv  op_global_planner.csv  op_motion_predictor.csv  op_trajectory_evaluator.csv  op_trajectory_generator.csv  pure_pursuit.csv  ray_ground_filter.csv  republish.csv  twist_filter.csv  twist_gate.csv  voxel_grid_filter.csv
Autoware/test/: imm_ukf_pda_track.csv  lidar_euclidean_cluster_detect.csv  lidar_republisher.csv  ndt_matching.csv  op_behavior_selector.csv  op_global_planner.csv  op_motion_predictor.csv  op_trajectory_evaluator.csv  op_trajectory_generator.csv  pose_relay.csv  pure_pursuit.csv  ray_ground_filter.csv  twist_filter.csv  twist_gate.csv  voxel_grid_filter.csv
csv/optimization_result/: DAG_001.csv  DAG_002.csv  DAG_003.csv  DAG_004.csv  DAG_005.csv  DAG_006.csv  DAG_007.csv  DAG_008.csv  DAG_009.csv  DAG_010.csv  DAG_011.csv  DAG_012.csv  DAG_013.csv  DAG_014.csv  DAG_015.csv  DAG_016.csv  DAG_017.csv  DAG_018.csv  DAG_019.csv  DAG_020.csv  DAG_021.csv  DAG_022.csv  DAG_023.csv  DAG_024.csv  DAG_025.csv  DAG_026.csv  DAG_027.csv  DAG_028.csv  DAG_029.csv  DAG_030.csv  DAG_031.csv  DAG_032.csv  DAG_033.csv  DAG_034.csv  DAG_035.csv  DAG_036.csv  DAG_037.csv  DAG_038.csv  DAG_039.csv  DAG_040.csv  (+60 more)
csv/optimization_result_He/: DAG_001.csv  DAG_002.csv  DAG_003.csv  DAG_004.csv  DAG_005.csv  DAG_006.csv  DAG_007.csv  DAG_008.csv  DAG_009.csv  DAG_010.csv  DAG_011.csv  DAG_012.csv  DAG_013.csv  DAG_014.csv  DAG_015.csv  DAG_016.csv  DAG_017.csv  DAG_018.csv  DAG_019.csv  DAG_020.csv  DAG_021.csv  DAG_022.csv  DAG_023.csv  DAG_024.csv  DAG_025.csv  DAG_026.csv  DAG_027.csv  DAG_028.csv  DAG_029.csv  DAG_030.csv  DAG_031.csv  DAG_032.csv  DAG_033.csv  DAG_034.csv  DAG_035.csv  DAG_036.csv  DAG_037.csv  DAG_038.csv  DAG_039.csv  DAG_040.csv  (+60 more)
csv/optimization_result_Park/: DAG_001.csv  DAG_002.csv  DAG_003.csv  DAG_004.csv  DAG_005.csv  DAG_006.csv  DAG_007.csv  DAG_008.csv  DAG_009.csv  DAG_010.csv  DAG_011.csv  DAG_012.csv  DAG_013.csv  DAG_014.csv  DAG_015.csv  DAG_016.csv  DAG_017.csv  DAG_018.csv  DAG_019.csv  DAG_020.csv  DAG_021.csv  DAG_022.csv  DAG_023.csv  DAG_024.csv  DAG_025.csv  DAG_026.csv  DAG_027.csv  DAG_028.csv  DAG_029.csv  DAG_030.csv  DAG_031.csv  DAG_032.csv  DAG_033.csv  DAG_034.csv  DAG_035.csv  DAG_036.csv  DAG_037.csv  DAG_038.csv  (+62 more)
html/: DAG_001.html  DAG_002.html  DAG_003.html  DAG_004.html  DAG_005.html  DAG_006.html  DAG_007.html  DAG_008.html  DAG_009.html  DAG_010.html  DAG_011.html  DAG_012.html  DAG_013.html  DAG_014.html  DAG_015.html  DAG_016.html  DAG_017.html  DAG_018.html  DAG_019.html  DAG_020.html  DAG_021.html  DAG_022.html  DAG_023.html  DAG_024.html  DAG_025.html  DAG_026.html  DAG_027.html  DAG_028.html  DAG_029.html  DAG_030.html  DAG_031.html  DAG_032.html  DAG_033.html  DAG_034.html  DAG_035.html  DAG_036.html  DAG_037.html  DAG_038.html  DAG_039.html  DAG_040.html  (+60 more)
scripts/: Autoware_experiment.py  create_launch_file.py  create_launch_file_He.py  create_launch_file_Park.py  kill_all_nodes.py  node_priority_assignment_He.py  random_dag_generator.py  result_visualizer.py  ros_node.py  spin_rate_experiment.py  spin_rate_experiment_He.py  spin_rate_experiment_Park.py  spin_rate_optimization.py  spin_rate_optimization_Park.py
src/: node.cpp
(+2655 files in other folders)
