cmake_minimum_required(VERSION 3.0.2)
project(research-dag-analysis)

## Find catkin and any catkin packages
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs roslib)

## Declare a catkin package
catkin_package()

include_directories(${catkin_INCLUDE_DIRS})

## Nodes
add_executable(node1 src/node.cpp)
target_link_libraries(node1 ${catkin_LIBRARIES})

add_executable(node2 src/node.cpp)
target_link_libraries(node2 ${catkin_LIBRARIES})

add_executable(node3 src/node.cpp)
target_link_libraries(node3 ${catkin_LIBRARIES})

add_executable(node4 src/node.cpp)
target_link_libraries(node4 ${catkin_LIBRARIES})

add_executable(node5 src/node.cpp)
target_link_libraries(node5 ${catkin_LIBRARIES})

add_executable(node6 src/node.cpp)
target_link_libraries(node6 ${catkin_LIBRARIES})

add_executable(node7 src/node.cpp)
target_link_libraries(node7 ${catkin_LIBRARIES})

add_executable(node8 src/node.cpp)
target_link_libraries(node8 ${catkin_LIBRARIES})

add_executable(node9 src/node.cpp)
target_link_libraries(node9 ${catkin_LIBRARIES})

add_executable(node10 src/node.cpp)
target_link_libraries(node10 ${catkin_LIBRARIES})

add_executable(node11 src/node.cpp)
target_link_libraries(node11 ${catkin_LIBRARIES})

add_executable(node12 src/node.cpp)
target_link_libraries(node12 ${catkin_LIBRARIES})

add_executable(node13 src/node.cpp)
target_link_libraries(node13 ${catkin_LIBRARIES})

add_executable(node14 src/node.cpp)
target_link_libraries(node14 ${catkin_LIBRARIES})

add_executable(node15 src/node.cpp)
target_link_libraries(node15 ${catkin_LIBRARIES})

add_executable(node16 src/node.cpp)
target_link_libraries(node16 ${catkin_LIBRARIES})

add_executable(node17 src/node.cpp)
target_link_libraries(node17 ${catkin_LIBRARIES})

add_executable(node18 src/node.cpp)
target_link_libraries(node18 ${catkin_LIBRARIES})

add_executable(node19 src/node.cpp)
target_link_libraries(node19 ${catkin_LIBRARIES})

add_executable(node20 src/node.cpp)
target_link_libraries(node20 ${catkin_LIBRARIES})

add_executable(node21 src/node.cpp)
target_link_libraries(node21 ${catkin_LIBRARIES})

add_executable(node22 src/node.cpp)
target_link_libraries(node22 ${catkin_LIBRARIES})

add_executable(node23 src/node.cpp)
target_link_libraries(node23 ${catkin_LIBRARIES})

add_executable(node24 src/node.cpp)
target_link_libraries(node24 ${catkin_LIBRARIES})

add_executable(node25 src/node.cpp)
target_link_libraries(node25 ${catkin_LIBRARIES})

add_executable(node26 src/node.cpp)
target_link_libraries(node26 ${catkin_LIBRARIES})

add_executable(node27 src/node.cpp)
target_link_libraries(node27 ${catkin_LIBRARIES})

add_executable(node28 src/node.cpp)
target_link_libraries(node28 ${catkin_LIBRARIES})

add_executable(node29 src/node.cpp)
target_link_libraries(node29 ${catkin_LIBRARIES})

add_executable(node30 src/node.cpp)
target_link_libraries(node30 ${catkin_LIBRARIES})

add_executable(node31 src/node.cpp)
target_link_libraries(node31 ${catkin_LIBRARIES})

add_executable(node32 src/node.cpp)
target_link_libraries(node32 ${catkin_LIBRARIES})

add_executable(node33 src/node.cpp)
target_link_libraries(node33 ${catkin_LIBRARIES})

add_executable(node34 src/node.cpp)
target_link_libraries(node34 ${catkin_LIBRARIES})

add_executable(node35 src/node.cpp)
target_link_libraries(node35 ${catkin_LIBRARIES})

add_executable(node36 src/node.cpp)
target_link_libraries(node36 ${catkin_LIBRARIES})

add_executable(node37 src/node.cpp)
target_link_libraries(node37 ${catkin_LIBRARIES})

add_executable(node38 src/node.cpp)
target_link_libraries(node38 ${catkin_LIBRARIES})

add_executable(node39 src/node.cpp)
target_link_libraries(node39 ${catkin_LIBRARIES})

add_executable(node40 src/node.cpp)
target_link_libraries(node40 ${catkin_LIBRARIES})